# mlx-foundation-project

./: .gitignore  README.md  pyproject.toml
.beads/: issues.jsonl
examples/: claude_desktop_config.json
plugins/knowledge-base/: README.md  pyproject.toml
plugins/knowledge-base/src/kb_plugin/: __init__.py
plugins/knowledge-base/src/kb_plugin/providers/: __init__.py
plugins/knowledge-base/tests/: __init__.py
scripts/: setup-oauth.py
