[project]
name = "gmail-mcp-workspace"
version = "0.1.0"
description = "Gmail MCP Server - Read unread emails and create draft replies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MLX Residency"}
]
keywords = ["mcp", "gmail", "claude", "ai", "email"]

[tool.uv.workspace]
members = ["packages/*", "plugins/*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-google-cloud-ndb",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["gmail_mcp", "mcp_plugins", "kb_plugin"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["packages/*/tests", "plugins/*/tests"]
addopts = "-v --tb=short"
